# tigeri-V3

Tiger V2/: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
Tiger V2/alembic/versions/: 0001_init.py  0002_phase1_agents.py  0003_phase1_complete.py  0004_tenant_integrations.py  0005_chat_persistence.py  0006_users_sessions.py  0007_phase2_integrations.py  0008_phase3_actions_audit_chain.py  0009_phase3b_chat_columns.py  0010_phase3b_rename_chat_tables.py  0011_phase3c_embeddings.py  0012_security_hardening.py  0013_tenant_byoa.py  0014_must_change_password.py
Tiger V2/docs/: PROD_GAPS.md  RUNBOOK.md
Tiger V2/frontend/: README.md  next.config.ts  package-lock.json  package.json
Tiger V2/frontend.minimal.bak/: README.md  package.json
Tiger V2/frontend.minimal.bak/app/: globals.css  layout.tsx  page.tsx
Tiger V2/frontend.minimal.bak/lib/: api.ts  types.ts
Tiger V2/frontend/app/: globals.css  layout.tsx  page.tsx
Tiger V2/frontend/lib/: api.ts  auth.ts  chat.ts  helper.ts  input-validation.ts  type.ts
Tiger V2/infra/docker/: Dockerfile
Tiger V2/scripts/: _oneshot_save_xero_byoa.py  backup_postgres.sh  deploy_telegram_env.sh  seed_admin.py  seed_local.py  telegram_setup.sh  test_invoice_email_flow.py
Tiger V2/tests/: conftest.py
Tiger V2/tests/integration/: test_activation_flow.py  test_invoice_e2e.py  test_must_change_password.py  test_tenant_isolation.py
Tiger V2/tests/unit/: test_a2a_signing.py  test_activation_machine.py  test_admin_agent.py  test_agent_card.py  test_audit_buffer.py  test_booking_agent.py  test_booking_participant_default.py  test_csrf_exemption_invariants.py  test_expense_agent.py  test_google_tools.py  (+13 more)
(+386 files in other folders)
