[project]
name = "tigeri"
version = "0.1.0"
description = "Tigeri.ai business automation platform — Slice 1 (Invoice Agent end-to-end)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "anthropic>=0.40",
    "bcrypt>=4.2",
    "email-validator>=2.0",
    "mcp>=1.1",
    "httpx>=0.28",
    "structlog>=24.4",
    "protobuf>=5.29",
    "pyyaml>=6.0",
    "python-ulid>=3.0",
    "boto3>=1.35",
    "langchain>=0.3.10",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.20",
    "langgraph>=0.2.50",
    "langgraph-checkpoint>=2.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langsmith>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
    "asgi-lifespan>=2.1",
    "grpcio-tools>=1.68",
    "aiosqlite>=0.20",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
